--- a/index.html
+++ b/index.html
@@ -1,33 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Biodata Diri</title>
+    <title>Biodata Louis</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f8ff;
-            line-height: 1.6;
-            margin: 20px;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background: linear-gradient(to right, #e0f7fa, #f0f8ff);
+            margin: 0;
+            padding: 20px;
         }
         .container {
             max-width: 600px;
             margin: auto;
-            background: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            background: #ffffff;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
         }
         h1 {
-            color: #333;
+            text-align: center;
+            color: #006064;
+        }
+        p {
+            font-size: 16px;
+            margin: 10px 0;
+        }
+        strong {
+            color: #00796b;
         }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>Biodata Diri</h1>
-        <p><strong>Nama:</strong>Louis Fachri Putra Jatmiko</p>
+        <p><strong>Nama:</strong> Louis Fachri Putra Jatmiko</p>
         <p><strong>Kelas:</strong> 12</p>
         <p><strong>Sekolah:</strong> SMK Telkom Sidoarjo</p>
         <p><strong>Jurusan:</strong> Sistem Informasi Jaringan dan Aplikasi (SIJA)</p>
